derive/tests/snapshots/timestamps/SignedDocument/get_signed_document_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `SignedDocument` from the `signed_document` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_signed_document_by_id<'a>(
        &'a self,
        id: impl Into<SignedDocumentId> + Clone,
    ) -> Result<SignedDocument, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().signed_document().id().find(id.clone().into().value()) {
            Some(signed_document) => Ok(signed_document),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "signed_document".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `SignedDocument` from the `signed_document` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_signed_document_by_id<'a>(
        &'a self,
        id: impl Into<SignedDocumentId> + Clone,
    ) -> Result<SignedDocument, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().signed_document().id().find(id.clone().into().value()) {
            Some(signed_document) => Ok(signed_document),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "signed_document".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
