derive/tests/snapshots/timestamps/SignedDocument/update_signed_document_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to update a `SignedDocument` row of the `signed_document` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn update_signed_document_by_id<'a>(
        &'a self,
        signed_document: SignedDocument,
    ) -> Result<SignedDocument, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let mut signed_document = signed_document;
        signed_document
            .modified_at = Some(
            self.ctx().timestamp().expect("a `WriteContext` always has a timestamp"),
        );
        let signed_document = self.db().signed_document().id().update(signed_document);
        Ok(signed_document)
    }
}
